@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="generator" content="Docutils 0.16: http://docutils.sourceforge.net/" />
+<meta name="generator" content="Docutils 0.13.1: http://docutils.sourceforge.net/" />
 <title>render</title>
 <link rel="stylesheet" href="../docutils-api.css" type="text/css" />
 </head>
@@ -37,7 +37,7 @@
 <h2 class="subtitle" id="low-level-methods-to-draw-on-an-image">Low-level methods to draw on an image</h2>
 
 <div class="contents topic" id="contents">
-<p class="topic-title">Contents</p>
+<p class="topic-title first">Contents</p>
 <ul class="simple">
 <li><a class="reference internal" href="#clonedrawinfo" id="id13">CloneDrawInfo</a></li>
 <li><a class="reference internal" href="#destroydrawinfo" id="id14">DestroyDrawInfo</a></li>
